<resources>
    <string name="app_name">MyCoordinatorApplicationTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_location">Location</string>
    <string name="action_places">Places</string>

    <string name="api_key">497521fbc89e471bbd6d438d8279614c</string>
    <string name="weather_api_key">d848ebcdc8db0f94f0f56d659168d7c9</string>
    <string name="lat">35</string>
    <string name="lon">139</string>
    <string name="articleTitle">Title</string>
    <string name="txtLatitude">Latitude</string>
    <string name="txtLongitude">Longitude</string>
    <string name="txt_art_img">Article Image</string>
    <string name="txt_weather">Weather</string>
    <string name="txt">Text</string>
    <string name="txt_desc">Description</string>
    <string name="art_poster">Article Poster</string>
    <string name="art_place">Place</string>
    <string name="mx_tmp">Max Temperature</string>
    <string name="mn_tmp">Min Temperature</string>
    <string name="wnd_spd">Wind Speed</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_detail_news">DetailNewsActivity</string>
    <string name="title_activity_position">PositionActivity</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_articles_list">ArticlesListActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_weaher">WeaherActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
</resources>
